--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1150,7 +1150,7 @@
     "plugins": "Plugins",
     "plugins-p": "Os  plugins permiten engadir novas funcións. Activa os que necesites agora, ou ben faino cando queiras desde o menú administrador.",
     "points": "puntos",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Puntos de interese",
     "port": "Porto",
     "position": "Posición",
     "positive-balance": "Saldo positivo",
@@ -1484,7 +1484,7 @@
     "tax-transport": "Transporte tributario",
     "taxes": "Impostos",
     "telemetry-data-to-send": "As instalacións rexistradas notifican periodicamente a versión de FacturaScripts, PHP, país, idioma e listaxe de  plugins.",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Prefixo telefónico",
     "template": "Modelo",
     "template-error": "Erro na plantilla",
     "template-not-found": "Template non atopou",
@@ -1651,6 +1651,6 @@
     "you-should-change-passwd": "Debería cambiar o seu contrasinal",
     "your": "seu",
     "zip-code": "Código postal",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "Códigos postais",
     "zip-error-wrong-structure": "A estructura do zip é incorreta. Debe conter a carpeta do plugin e só un plugin."
 }
