--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1576,7 +1576,7 @@
     "update-time": "hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Actualizando contadores de arquivos adxuntos",
     "upload-file": "Subir ficheiro",
     "uploaded-at": "Cargado en",
     "url": "Sitio web",
