--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1355,7 +1355,7 @@
     "second-trimester": "Bigarren hiruhilekoa",
     "select": "Aukeratu",
     "select-all": "Guztiak hautatu",
-    "select-content-for": "%content%-erako edukia hautatu",
+    "select-content-for": "%content%-erako eduki hautatu",
     "select-none": "Bat ere ez hautatu",
     "select-plugin-zip-file": "Hautatu plugin zip fitxategia:",
     "select-user": "Aukeratu erabiltzailea",
